# studybeast

./: .gitignore  .terraformignore  Brewfile  Brewfile.lock.json  Dockerfile  README.md  development.env  docker-compose.yml
api/: Cargo.toml  Dockerfile  Makefile.toml  development.env  docker-compose.yml
api/dockerfiles/: Dockerfile.dev
api/src/: handlers.rs  main.rs  user.rs
api/src/config/: config.rs  mod.rs  stage.rs
api/src/logentry/: logger.rs
api/src/schema/: mod.rs  mutation.rs  query.rs  root.rs
db/: postgresql.conf
redirector/: Dockerfile  nginx.conf
scripts/: build_and_push_redirector.sh  init_cluster.sh  init_dev_cluster.sh  onboard_mac.sh  onboard_mac.zsh
terraform/: README.md  backend.hcl  main.tf
terraform/development/: main.tf  variables.tf
terraform/modules/api/: main.tf  variables.tf
terraform/modules/cloudrun/: main.tf  variables.tf
terraform/modules/db/: main.tf  outputs.tf  variables.tf
terraform/modules/dbproxy/: .tflint.hcl  main.tf  outputs.tf  run_cloud_sql_proxy.sh  run_cloud_sql_proxy.tpl  variables.tf
terraform/modules/dns/: main.tf  outputs.tf  variables.tf
terraform/modules/serviceaccount/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
terraform/modules/vpcconnector/: main.tf  variables.tf
terraform/modules/webclient/: main.tf  variables.tf
terraform/prod/: backend.hcl  main.tf  variables.tf
terraform/staging/: backend.hcl  main.tf
terraform/util/deployapi/: main.tf  variables.tf
