[package]
name = "studybeast-api"
version = "0.1.0"
authors = ["Ryan Boehning <ryanboehning@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "1.*"
actix-web = { version = "2.0.0", features = ["rustls"] }
derivative = "2.*"
diesel = { version = "1.*", features = ["postgres"] }
dotenv = "0.*"
futures = "0.*"
juniper = { git = "https://github.com/graphql-rust/juniper.git" }
rustls = "0.*"
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
uuid = { version = "0.*", features = ["serde", "v4"] }

# enable cross-compilation of linux binaries on macOS
# [target.x86_64-unknown-linux-musl]
# linker = "x86_64-linux-musl-gcc"
[profile.release]
codegen-units = 1
lto = "on"
